Add placeholder text and Translations

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -6,3 +6,6 @@ Is active: Active
 Customer: Customer
 User: User
 Admin: Admin
+Enter Username: Enter Username
+Enter Email: Enter Email
+Enter Password: Enter Password
